--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGO_DB_PROD='mongodb+srv://dira29:1q%40w3e4r5t6y@cluster0.9m79p.mongodb.net/scraping-saas'
+MONGO_DB_PROD=''
 MONGO_DB_DEV='mongodb://localhost:27017/scraping-saas'
 
 JWT_TOKEN="1q@w3e4r5t6y"
