--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": ["es5", "es6"],
+    "target": "es5",
+    "lib": ["es2015", "dom"],
     "module": "commonjs",
     "strict": true,
-    "strictPropertyInitialization": false,
     "esModuleInterop": true,
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "preserveConstEnums": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "types": ["node"],
     "sourceMap": true,
     "outDir": "./build",
     "baseUrl": "./",
