--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/hapi": "^20.0.1",
     "@now/node-server": "^0.8.2",
     "@vercel/node": "^1.8.4",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
@@ -28,6 +29,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@ef-carbon/tspm": "^2.2.5",
@@ -37,6 +39,7 @@
     "@types/lodash": "^4.14.164",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.14.6",
+    "@types/node-fetch": "^2.5.7",
     "cross-env": "^7.0.2",
     "nodemon": "^2.0.6",
     "tsconfig-paths": "^3.9.0"
