--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+PORT=3015
+
 MONGO_DB_PROD='mongodb+srv://dira29:1q%40w3e4r5t6y@cluster0.9m79p.mongodb.net/scraping-saas'
 MONGO_DB_DEV='mongodb://localhost:27017/scraping-saas'
 
