--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tsc": "tsc",
     "dev": "cross-env NODE_ENV=development && nodemon -r tsconfig-paths/register ./src/index.ts",
     "build": "cross-env NODE_ENV=production tsc && ef-tspm",
-    "start:prod": "node ./build/index.js"
+    "start:prod": "node ./build/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/preset-env": "^7.12.1",
@@ -35,13 +36,17 @@
     "@ef-carbon/tspm": "^2.2.5",
     "@types/bcrypt": "^3.0.0",
     "@types/hapi__hapi": "^20.0.2",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.164",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
     "cross-env": "^7.0.2",
+    "jest": "^26.6.2",
     "nodemon": "^2.0.6",
+    "supertest": "^6.0.0",
+    "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0"
   },
   "_moduleAliases": {
