--- a/.github/workflows/cd-main.yml
+++ b/.github/workflows/cd-main.yml
@@ -23,7 +23,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          port: ${{ secrets.PORT }}
+          port: 2232
           script: |
             cd /var/www/marketplace_scraping/backend
             git pull origin master
