--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@babel/preset-env": "^7.12.1",
     "@hapi/hapi": "^20.0.1",
+    "@hapi/inert": "^6.0.3",
     "@now/node-server": "^0.8.2",
     "@vercel/node": "^1.8.4",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
+    "exceljs": "^4.2.0",
     "hapi-auth-jwt2": "^10.2.0",
     "hapi-cors": "^1.0.3",
     "isomorphic-unfetch": "^3.1.0",
@@ -26,6 +28,7 @@
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
     "mongoose": "^5.10.11",
+    "qs": "^6.9.4",
     "typescript": "^4.0.5",
     "winston": "^3.3.3"
   },
@@ -36,12 +39,14 @@
     "@ef-carbon/tspm": "^2.2.5",
     "@types/bcrypt": "^3.0.0",
     "@types/hapi__hapi": "^20.0.2",
+    "@types/hapi__inert": "^5.2.1",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.164",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
+    "@types/qs": "^6.9.5",
     "cross-env": "^7.0.2",
     "jest": "^26.6.2",
     "nodemon": "^2.0.6",
