--- a/.github/workflows/cd-main.yml
+++ b/.github/workflows/cd-main.yml
@@ -29,4 +29,5 @@ jobs:
             git pull origin master
             git status
             npm install --only=prod
+            npm run build
             pm2 restart backend_scrapping
