--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "dev": "cross-env NODE_ENV=development && nodemon -r tsconfig-paths/register ./src/index.ts",
     "build": "cross-env NODE_ENV=production tsc && ef-tspm",
     "start:prod": "node ./build/index.js",
+    "db:migrate": "sequelize db:migrate",
+    "migrate": "ts-node ./node_modules/.bin/sequelize db:migrate",
     "test": "jest"
   },
   "dependencies": {
     "@babel/preset-env": "^7.12.1",
     "@hapi/hapi": "^20.0.1",
     "@hapi/inert": "^6.0.3",
+    "@hapi/joi": "^17.1.1",
     "@now/node-server": "^0.8.2",
     "@vercel/node": "^1.8.4",
     "axios": "^0.21.0",
@@ -28,7 +31,11 @@
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
     "mongoose": "^5.10.11",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "qs": "^6.9.4",
+    "sequelize": "^6.3.5",
+    "sequelize-cli-typescript": "git+https://github.com/moodseller/sequelize-cli-typescript.git",
     "typescript": "^4.0.5",
     "winston": "^3.3.3"
   },
@@ -38,8 +45,10 @@
     "@babel/preset-typescript": "^7.12.1",
     "@ef-carbon/tspm": "^2.2.5",
     "@types/bcrypt": "^3.0.0",
+    "@types/bluebird": "^3.5.33",
     "@types/hapi__hapi": "^20.0.2",
     "@types/hapi__inert": "^5.2.1",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.164",
@@ -47,6 +56,8 @@
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
     "@types/qs": "^6.9.5",
+    "@types/sequelize": "^4.28.9",
+    "@types/validator": "^13.1.0",
     "cross-env": "^7.0.2",
     "jest": "^26.6.2",
     "nodemon": "^2.0.6",
@@ -57,6 +68,8 @@
   "_moduleAliases": {
     "@modules/*": "./build/app/modules/*",
     "@routes/*": "./build/routes/*",
+    "@models/*": "./build/app/models/*",
+    "@lib/*": "./build/app/lib/*",
     "@repository/*": "./build/app/repository/*",
     "@utils/*": "./build/server/utils/*",
     "@helpers/*": "./build/app/helpers/*"
